--- a/env/discover-12.5/intel-19.1.3
+++ b/env/discover-12.5/intel-19.1.3
@@ -105,6 +105,9 @@ set   def_lvt_gdal        /discover/nobackup/projects/lis/libs/gdal/2.4.1_intel-
 set   def_lvt_fortrangis  /discover/nobackup/projects/lis/libs/fortrangis/2.4_intel-19.1.0.166_sles12.3
 set   def_ldt_libgeotiff  /discover/nobackup/projects/lis/libs/geotiff/1.4.3_intel-19.1.0.166_sles12.3
 set   def_wrfhydro_netcdf /discover/nobackup/projects/lis/libs/netcdf/4.5.0_intel-19.1.0.166_sles12.3
+set   def_parflow_hdf5    /discover/nobackup/projects/lis/libs/hdf5/1.10.1_intel-19.1.0.166_sles12.3
+set   def_parflow_hypre   /discover/nobackup/projects/nca/ParFlow_DATA/install/discover-12.5/hypre-2.9.0b_intel-19.1.3.304
+set   def_parflow_silo    /discover/nobackup/projects/nca/ParFlow_DATA/install/discover-12.5/silo-4.10.2_intel-19.1.3.304
 
 setenv   DEV_ENV         LISF_7_INTEL_19_1_3_304
 setenv   LIS_ARCH        linux_ifc
@@ -165,6 +168,15 @@ setenv   WRF_HYDRO_NUOPC     1
 setenv   WRF_HYDRO_NUOPC_LSM 0
 setenv   WRF_HYDRO_NUDGING   0
 setenv   HYDRO_D             0
+
+setenv   PF_SRC             "$def_nlc_dir/src/parflow"
+setenv   PARFLOW_DIR        "$def_nlc_dir/install/PARFLOW"
+setenv   PARFLOW_HYPRE_DIR  $def_parflow_hypre
+setenv   PARFLOW_HDF5_DIR   $def_parflow_hdf5
+setenv   PARFLOW_SILO_DIR   $def_parflow_silo
+setenv   PARFLOW_AMPS_LAYER mpi1
+setenv   PARFLOW_HAVE_CLM   OFF
+setenv   PARFLOW            1
 
 setenv CMAKE_C_COMPILER       mpicc
 setenv CMAKE_CXX_COMPILER     mpicxx
