Update PARFLOW submodule
* add python3 scripting to pfnuopc cap
* update environment files with python
* update setuprun.sh and usecases

--- a/env/cheyenne.intel.17.0.1
+++ b/env/cheyenne.intel.17.0.1
@@ -53,6 +53,8 @@ export NETCDF="${LIS_NETCDF}"
 export WRF_HYDRO="1"
 
 # PARFLOW environment variables
+export PF_SRC="${NLC_DIR}/src/parflow"
+export PARFLOW_DIR="${NLC_DIR}/PARFLOW-INSTALL"
 #export PARFLOW_HYPRE_DIR=""
 #export PARFLOW_HDF5_DIR=""
 #export PARFLOW_SILO_DIR=""
@@ -66,5 +68,5 @@ export CMAKE_CXX_COMPILER="mpicxx"
 export CMAKE_Fortran_COMPILER="mpif90"
 export NLC_LIS_INST="${NLC_DIR}/LIS-INSTALL"
 export NLC_WRFHYDRO_INST="${NLC_DIR}/WRFHydro-INSTALL"
-export NLC_PARFLOW_INST="${NLC_DIR}/PARFLOW-INSTALL"
+export NLC_PARFLOW_INST="${PARFLOW_DIR}"
 export ESMFMKFILE="${LIS_LIBESMF}/esmf.mk"
