--- a/templates/runscripts/discover-12.5/run.intel-19.1.3
+++ b/templates/runscripts/discover-12.5/run.intel-19.1.3
@@ -10,7 +10,10 @@
 
 export NLC_DIR=${SLURM_SUBMIT_DIR}/../..
 export NLC_JOBID=${SLURM_JOB_ID}
-source ${NLC_DIR}/env/discover.intel.19.1.3
+
+source /etc/profile.d/modules.sh
+module use "${NLC_DIR}/env/discover-12.5"
+module load "intel-19.1.3"
 
 # set umask
 umask 022
