--- a/templates/runscripts/discover-15.4/run.intel-2023.2.1
+++ b/templates/runscripts/discover-15.4/run.intel-2023.2.1
@@ -4,13 +4,16 @@
 #SBATCH --time=__TIME__
 #SBATCH --partition=compute
 #SBATCH --account=s1189
-#SBATCH --constraint=hasw
+#SBATCH --constraint=mil
 #SBATCH --qos=serial
 #SBATCH --output=job.log
 
 export NLC_DIR=${SLURM_SUBMIT_DIR}/../..
 export NLC_JOBID=${SLURM_JOB_ID}
-source ${NLC_DIR}/env/discover.intel.14.0.3
+
+source /etc/profile.d/modules.sh
+module use "${NLC_DIR}/env/discover-15.4"
+module load "intel-2023.2.1"
 
 # set umask
 umask 022
