Update libraries and compilers (#8)
* change default compiler to intel 2021.4.0 (discover)
* update ESMF version to 8.1.1 (discover)
* add configure/build/setuprun option to skip env setup
* add debug configuration to LIS build
* disable VIC in LIS configuration
* move environment setup to setupenv.sh
* fix TransferActionGeomObject in mediator
* add support for discover SCU17 (SLES 15.4)

--- a/templates/runscripts/discover-15.4/run.intel-2023.2.1
+++ b/templates/runscripts/discover-15.4/run.intel-2023.2.1
@@ -3,23 +3,20 @@
 #SBATCH --ntasks=__TASKS__
 #SBATCH --time=__TIME__
 #SBATCH --partition=compute
-#SBATCH --account=s1657
-#SBATCH --constraint=hasw
+#SBATCH --account=s1189
+#SBATCH --constraint=mil
 #SBATCH --qos=serial
 #SBATCH --output=job.log
 
 export NLC_DIR=${SLURM_SUBMIT_DIR}/../..
 export NLC_JOBID=${SLURM_JOB_ID}
-source ${NLC_DIR}/env/discover.intel.14.0.3
+
+source /etc/profile.d/modules.sh
+module use "${NLC_DIR}/env/discover-15.4"
+module load "intel-2023.2.1"
 
 # set umask
 umask 022
-# set limits
-ulimit -t unlimited
-ulimit -f unlimited
-ulimit -d unlimited
-ulimit -s unlimited
-ulimit -c unlimited
 
 echo "Job ID: ${NLC_JOBID}"
 
