--- a/env/cheyenne/intel-17.0.1
+++ b/env/cheyenne/intel-17.0.1
@@ -1,10 +1,8 @@
 #!/bin/bash
 
 # check for NASA Land Coupler source directory
-if [ -z "${NLC_DIR}" ] ; then
-  echo "ERROR: Please set NLC_DIR to root directory of cloned repository."
-  exit 1
-fi
+NLC_DIR="${NLC_DIR:-$(cd "$(dirname "${BASH_SOURCE[0]}")/.." && pwd -P)}"
+export NLC_DIR=${NLC_DIR}
 if [ ! -d "${NLC_DIR}" ]; then
   echo "ERROR: ${NLC_DIR} directory does not exist."
   exit 1
@@ -12,23 +10,19 @@ fi
 
 # load modules
 module purge
-module load ncarenv/1.3
-module load intel/19.1.1
-module load ncarcompilers/0.5.0
-module load mpt/2.25
-module load cmake/3.18.2
-module use -a /glade/p/ral/hap/drosen/projects/LISHydro/modulefiles/intel/19.1.1
-module load hdf5-lishydro/1.10.8
+module load ncarenv/1.2
+module load intel/17.0.1
+module load ncarcompilers/0.4.1
+module load mpt/2.15f
+module load cmake/3.16.4
+module use -a /glade/p/ral/hap/drosen/projects/LISHydro/modulefiles/intel/17.0.1
+module load hdf5-lishydro/1.8.14
 module load netcdf-lishydro/4.3.3.1
 module load openjpeg-lishydro/2.3.0
 module load eccodes-lishydro/2.7.0
-module load esmf-lishydro/8.0.1
+module load esmf-lishydro/7.1.0
 module load hdf-lishydro/4.2.11
 module load hdfeos-lishydro/2.19v1.00
-module load hypre-lishydro/2.9.0b
-#module load hdf5-lishydro/1.10.8
-module load silo-lishydro/4.10.2
-
 module list
 
 # needed by LIS
@@ -57,18 +51,10 @@ export WRF_HYDRO_NUOPC="1"
 export WRF_HYDRO_NUOPC_LSM="0"
 export HYDRO_D="0"
 
-# PARFLOW environment variables
-#export PARFLOW_HYPRE_DIR=""
-#export PARFLOW_HDF5_DIR=""
-#export PARFLOW_SILO_DIR=""
-export PARFLOW_AMPS_LAYER="mpi1"
-export PARFLOW_HAVE_CLM="OFF"
-
 # NASA Land Coupler environment variables
 export CMAKE_C_COMPILER="mpicc"
 export CMAKE_CXX_COMPILER="mpicxx"
 export CMAKE_Fortran_COMPILER="mpif90"
 export NLC_LIS_INST="${NLC_DIR}/LIS-INSTALL"
 export NLC_WRFHYDRO_INST="${NLC_DIR}/WRFHydro-INSTALL"
-export NLC_PARFLOW_INST="${NLC_DIR}/PARFLOW-INSTALL"
 export ESMFMKFILE="${LIS_LIBESMF}/esmf.mk"
