--- a/templates/runscripts/discover-12.5/run.intel-19.1.3
+++ b/templates/runscripts/discover-12.5/run.intel-19.1.3
@@ -3,14 +3,17 @@
 #SBATCH --ntasks=__TASKS__
 #SBATCH --time=__TIME__
 #SBATCH --partition=compute
-#SBATCH --account=s1657
-#SBATCH --constraint=hasw
+#SBATCH --account=s1189
+#SBATCH --constraint=sky
 #SBATCH --qos=serial
 #SBATCH --output=job.log
 
 export NLC_DIR=${SLURM_SUBMIT_DIR}/../..
 export NLC_JOBID=${SLURM_JOB_ID}
-source ${NLC_DIR}/env/discover.intel.19.1.0
+
+source /etc/profile.d/modules.sh
+module use "${NLC_DIR}/env/discover-12.5"
+module load "intel-19.1.3"
 
 # set umask
 umask 022
