--- a/env/cheyenne/intel-19.1.1
+++ b/env/cheyenne/intel-19.1.1
@@ -49,12 +49,11 @@ export NETCDF="${LIS_NETCDF}"
 export WRF_HYDRO="1"
 export WRF_HYDRO_NUOPC="1"
 export WRF_HYDRO_NUOPC_LSM="0"
+export WRF_HYDRO_NUDGING="0"
 export HYDRO_D="0"
 
 # NASA Land Coupler environment variables
 export CMAKE_C_COMPILER="mpicc"
 export CMAKE_CXX_COMPILER="mpicxx"
 export CMAKE_Fortran_COMPILER="mpif90"
-export NLC_LIS_INST="${NLC_DIR}/LIS-INSTALL"
-export NLC_WRFHYDRO_INST="${NLC_DIR}/WRFHydro-INSTALL"
 export ESMFMKFILE="${LIS_LIBESMF}/esmf.mk"
